refactor(quality): restore sonar quality gates (#165)
Restores backend and frontend Sonar Quality Gates with behavior-preserving refactors and focused regression coverage.